[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Village/TreeBuilding.gd" type="Script" id=1]
[ext_resource path="res://UIpack/UI/blue_button13.png" type="Texture" id=2]
[ext_resource path="res://UIpack/UI/blue_button04.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Village/Building_ProgBar.gd" type="Script" id=4]
[ext_resource path="res://Fontpack/Fonts/Kenney Future Narrow.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Tileset/BuildingSprites.tres" type="TileSet" id=6]
[ext_resource path="res://Scripts/Village/BldgImg.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Village/level2_treeimg.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Village/Levelupbar_Tree.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="TreeBuilding" type="Sprite" index="0"]

position = Vector2( 535.987, 257.111 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Building_UI" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -116.0
margin_top = -117.0
margin_right = 122.0
margin_bottom = 101.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Building_ProgBar" type="TextureProgress" parent="Building_UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 14.0
margin_top = 18.0
margin_right = 204.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 2 )
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
script = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="Building_Name" type="RichTextLabel" parent="Building_UI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_top = 164.0
margin_right = 242.0
margin_bottom = 239.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = false
bbcode_text = ""
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "Mangrove Tree"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="BldgImg" type="TileMap" parent="." index="1"]

position = Vector2( -1, 1 )
mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 18, 18 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -655364, 0, 0, -655363, 0, 0, -655362, 0, 0, -655361, 0, 0, -720896, 0, 0, -720895, 0, 0, -720894, 0, 0, -589830, 0, 0, -589829, 0, 0, -589828, 0, 0, -589827, 0, 0, -589826, 0, 0, -589825, 0, 0, -655360, 0, 0, -655359, 0, 0, -655358, 0, 0, -655357, 0, 0, -655356, 0, 0, -655355, 0, 0, -524294, 0, 0, -524293, 0, 0, -524292, 0, 0, -524291, 2, 0, -524290, 2, 0, -524289, 0, 0, -589824, 0, 0, -589823, 0, 0, -589822, 0, 0, -589821, 0, 0, -589820, 0, 0, -589819, 0, 0, -458759, 0, 0, -458758, 0, 0, -458757, 2, 0, -458756, 0, 0, -458755, 0, 0, -458754, 2, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524283, 0, 0, -393223, 0, 0, -393222, 0, 0, -393221, 0, 0, -393220, 2, 0, -393219, 0, 0, -393218, 2, 0, -393217, 0, 0, -458752, 0, 0, -458751, 2, 0, -458750, 2, 0, -458749, 2, 0, -458748, 0, 0, -458747, 0, 0, -327685, 0, 0, -327684, 0, 0, -327683, 2, 0, -327682, 2, 0, -327681, 0, 0, -393216, 0, 0, -393215, 2, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -262146, 2, 0, -262145, 2, 0, -327680, 2, 0, -327679, 2, 0, -196610, 2, 0, -196609, 2, 0, -262144, 2, 0, -262143, 2, 0, -131074, 2, 0, -131073, 2, 0, -196608, 2, 0, -196607, 2, 0, -65538, 2, 0, -65537, 2, 0, -131072, 2, 0, -131071, 2, 0, -2, 2, 0, -1, 2, 0, -65536, 2, 0, -65535, 2, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 131067, 2, 0, 131068, 2, 0, 131069, 2, 0, 65538, 2, 0, 65539, 2, 0, 65540, 2, 0 )
script = ExtResource( 7 )
_sections_unfolded = [ "Cell" ]

[node name="LevelupScheme" type="Control" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="level2_treeimg" type="TileMap" parent="LevelupScheme" index="0"]

mode = 0
tile_set = ExtResource( 6 )
cell_size = Vector2( 18, 18 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1179653, 0, 0, -1179652, 0, 0, -1179651, 0, 0, -1179650, 0, 0, -1179649, 0, 0, -1245184, 0, 0, -1245183, 0, 0, -1245182, 0, 0, -1245181, 0, 0, -1245180, 0, 0, -1114119, 0, 0, -1114118, 0, 0, -1114117, 0, 0, -1114116, 0, 0, -1114115, 0, 0, -1114114, 0, 0, -1114113, 0, 0, -1179648, 0, 0, -1179647, 0, 0, -1179646, 0, 0, -1179645, 0, 0, -1179644, 0, 0, -1179643, 0, 0, -1048584, 0, 0, -1048583, 0, 0, -1048582, 0, 0, -1048581, 0, 0, -1048580, 0, 0, -1048579, 0, 0, -1048578, 0, 0, -1048577, 0, 0, -1114112, 0, 0, -1114111, 0, 0, -1114110, 0, 0, -1114109, 0, 0, -1114108, 0, 0, -1114107, 0, 0, -1114106, 0, 0, -983048, 0, 0, -983047, 0, 0, -983046, 2, 0, -983045, 0, 0, -983044, 0, 0, -983043, 0, 0, -983042, 0, 0, -983041, 0, 0, -1048576, 0, 0, -1048575, 0, 0, -1048574, 0, 0, -1048573, 0, 0, -1048572, 0, 0, -1048571, 0, 0, -1048570, 0, 0, -917513, 0, 0, -917512, 0, 0, -917511, 0, 0, -917510, 0, 0, -917509, 2, 0, -917508, 2, 0, -917507, 2, 0, -917506, 0, 0, -917505, 0, 0, -983040, 2, 0, -983039, 0, 0, -983038, 0, 0, -983037, 0, 0, -983036, 0, 0, -983035, 0, 0, -983034, 0, 0, -983033, 0, 0, -851978, 0, 0, -851977, 0, 0, -851976, 0, 0, -851975, 0, 0, -851974, 0, 0, -851973, 0, 0, -851972, 0, 0, -851971, 2, 0, -851970, 0, 0, -851969, 0, 0, -917504, 0, 0, -917503, 2, 0, -917502, 0, 0, -917501, 0, 0, -917500, 0, 0, -917499, 2, 0, -917498, 2, 0, -917497, 2, 0, -917496, 0, 0, -786442, 0, 0, -786441, 0, 0, -786440, 0, 0, -786439, 2, 0, -786438, 2, 0, -786437, 0, 0, -786436, 0, 0, -786435, 2, 0, -786434, 0, 0, -786433, 0, 0, -851968, 2, 0, -851967, 2, 0, -851966, 2, 0, -851965, 0, 0, -851964, 2, 0, -851963, 2, 0, -851962, 0, 0, -851961, 0, 0, -851960, 0, 0, -720906, 0, 0, -720905, 0, 0, -720904, 0, 0, -720903, 0, 0, -720902, 2, 0, -720901, 2, 0, -720900, 2, 0, -720899, 2, 0, -720898, 2, 0, -720897, 2, 0, -786432, 2, 0, -786431, 2, 0, -786430, 0, 0, -786429, 0, 0, -786428, 2, 0, -786427, 0, 0, -786426, 0, 0, -786425, 0, 0, -786424, 0, 0, -655370, 0, 0, -655369, 0, 0, -655368, 2, 0, -655367, 0, 0, -655366, 0, 0, -655365, 0, 0, -655364, 2, 0, -655362, 2, 0, -655361, 2, 0, -720896, 2, 0, -720895, 2, 0, -720893, 2, 0, -720892, 0, 0, -720891, 0, 0, -720890, 0, 0, -720889, 0, 0, -720888, 0, 0, -589834, 0, 0, -589833, 0, 0, -589832, 0, 0, -589831, 2, 0, -589830, 2, 0, -589827, 2, 0, -589826, 2, 0, -589825, 2, 0, -655360, 2, 0, -655359, 2, 0, -655357, 2, 0, -655354, 0, 0, -655353, 0, 0, -655352, 0, 0, -524297, 0, 0, -524296, 0, 0, -524295, 0, 0, -524294, 0, 0, -524293, 2, 0, -524292, 0, 0, -524290, 2, 0, -524289, 2, 0, -589824, 2, 0, -589823, 2, 0, -589822, 2, 0, -589821, 2, 0, -589820, 2, 0, -589819, 2, 0, -589818, 2, 0, -589817, 0, 0, -589816, 0, 0, -458760, 0, 0, -458759, 0, 0, -458757, 0, 0, -458756, 2, 0, -458755, 2, 0, -458754, 2, 0, -458753, 2, 0, -524288, 2, 0, -524287, 2, 0, -524286, 2, 0, -524285, 2, 0, -524284, 0, 0, -524283, 0, 0, -524282, 0, 0, -524281, 0, 0, -393222, 0, 0, -393221, 0, 0, -393220, 0, 0, -393219, 2, 0, -393218, 2, 0, -393217, 2, 0, -458752, 2, 0, -458751, 2, 0, -458749, 2, 0, -458747, 0, 0, -458746, 0, 0, -327685, 0, 0, -327684, 0, 0, -327683, 2, 0, -327682, 2, 0, -327681, 2, 0, -393216, 2, 0, -393215, 2, 0, -393214, 2, 0, -393213, 0, 0, -393212, 0, 0, -262146, 2, 0, -262145, 2, 0, -327680, 2, 0, -327679, 2, 0, -196610, 2, 0, -196609, 2, 0, -262144, 2, 0, -262143, 2, 0, -196607, 2, 0, -131071, 2, 0 )
script = ExtResource( 8 )
_sections_unfolded = [ "Cell" ]

[node name="Levelupbar_Tree" type="TextureProgress" parent="LevelupScheme" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -102.0
margin_top = -252.0
margin_right = 88.0
margin_bottom = -203.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = ExtResource( 2 )
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
script = ExtResource( 9 )
_sections_unfolded = [ "Textures" ]

[connection signal="upgrade_tree_building" from="." to="LevelupScheme/Levelupbar_Tree" method="_on_TreeBuilding_upgrade_tree_building"]

[connection signal="building_complete" from="Building_UI/Building_ProgBar" to="." method="_on_Building_ProgBar_building_complete"]

[connection signal="building_complete" from="Building_UI/Building_ProgBar" to="BldgImg" method="_on_Building_ProgBar_building_complete"]

[connection signal="upgrade_tree_bldg_complete" from="LevelupScheme/Levelupbar_Tree" to="." method="_on_Levelupbar_Tree_upgrade_tree_bldg_complete"]

[connection signal="upgrade_tree_bldg_complete" from="LevelupScheme/Levelupbar_Tree" to="LevelupScheme/level2_treeimg" method="_on_Levelupbar_Tree_upgrade_tree_bldg_complete"]


